feat: Migrate welcome configs to MongoDB and fix dashboard date handling
- Migrate welcome configurations from JSON file to MongoDB
- Add WelcomeConfig model with proper schema
- Update bot to use MongoDB for welcome message generation
- Fix frontend ImageConfig to load saved configurations on page reload
- Fix dashboard statistics date handling to use local timezone
- Resolve timezone issues causing joins to be counted in wrong days
- Add proper date formatting for consistent join statistics
- Improve welcome message persistence and reliability

--- a/bot/welcomeConfigs.json
+++ b/bot/welcomeConfigs.json
@@ -4,9 +4,9 @@
     "config": {
       "welcomeText": "Welcome - Syro Bot",
       "userText": "{user}",
-      "backgroundColor": "#000000",
+      "backgroundColor": "#1a1a1a",
       "textColor": "#ffffff",
-      "fontSize": 37,
+      "fontSize": 35,
       "imageSize": 158,
       "mentionUser": true,
       "customMessage": "",
