--- a/bot/package.json
+++ b/bot/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
+    "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
