--- a/bot/package.json
+++ b/bot/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "canvas": "^3.1.2",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "discord.js": "^14.21.0",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
