--- a/bot/package.json
+++ b/bot/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "body-parser": "^2.2.0",
     "canvas": "^3.1.2",
     "compression": "^1.8.0",
