--- a/bot/package.json
+++ b/bot/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^2.2.0",
     "canvas": "^3.1.2",
     "compression": "^1.8.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "discord.js": "^14.21.0",
     "dotenv": "^16.3.1",
