--- a/bot/package.json
+++ b/bot/package.json
@@ -34,6 +34,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "sanitize-html": "^2.17.0",
