--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.10.0",
+    "cookie-parser": "^1.4.7",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
