--- a/bot/package.json
+++ b/bot/package.json
@@ -25,6 +25,7 @@
     "canvas": "^3.1.2",
     "compression": "^1.8.0",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "discord.js": "^14.21.0",
     "dotenv": "^16.3.1",
