--- a/bot/package.json
+++ b/bot/package.json
@@ -41,7 +41,8 @@
     "sanitize-html": "^2.17.0",
     "validator": "^13.15.15",
     "winston": "^3.17.0",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
